--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(app app.cpp)
 target_compile_features(app PRIVATE cxx_std_17)
-target_link_libraries(app PRIVATE Utilities Shapes)
+target_link_libraries(app PRIVATE Utilities Shapes World Tracers)
