--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable(app app.cpp)
 
 target_compile_features(app PRIVATE cxx_std_17)
 
-target_link_libraries(app PRIVATE Window World Cameras Samplers Tracers Shapes Utilities)
+target_link_libraries(app PRIVATE Window World Cameras Materials BRDFs Lights Samplers Tracers Shapes Utilities)
